syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto

package math.rpc;
option go_package = "rpc";

message RectArgs {
  double width = 1;
  double height = 2;
}

message RectReply {
  double perimeter = 1;
  double square = 2;
}

message CircleArgs {
  double radius = 1;
}

message CircleReply {
  double length = 1;
  double square = 2;
}

service Math {
  rpc Rect(RectArgs) returns (RectReply) {}
  rpc Circle(CircleArgs) returns (CircleReply) {}
}
